# root

./: .clang-format  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SPEC.md  go.mod  logging.c  logging.go  logging.h  logging_test.go  loggingtest.c  main.go  path.c  path.go  path.h  path_test.go  pathtest.c  root.1  root.c  root.h  spec.md  user.c  user.go  user.h  usertest  usertest.c
legacy/: Makefile  args.c  args.h  argstest.c  logging.h  path.c  path.h  pathtest.c  root.c
src/: args.rs  exit_code.rs  logging.rs  main.rs  path.rs  user.rs
tests/: cli.rs
